--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
 # Define how to build archive.so:
   INCLUDE_DIRECTORIES(${LIBARCHIVE_INCLUDE_DIR} ${LUA_INCLUDE_DIR})
   ADD_LIBRARY(cmod_archive MODULE
-    ar.c ar_write.c ar_registry.c ar_read.c ar_entry.c archive.def)
+    ar.c ar_write.c ar_registry.c ar_read.c ar_entry.c ar.h archive.def)
   SET_TARGET_PROPERTIES(cmod_archive PROPERTIES PREFIX "")
   SET_TARGET_PROPERTIES(cmod_archive PROPERTIES OUTPUT_NAME archive)
   TARGET_LINK_LIBRARIES(cmod_archive ${LUA_LIBRARIES} ${LIBARCHIVE_LIBRARY})  
